# gml

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  TODO.md  app.go  bytes.go  cgo-shared.go  cgo-static.go  cgo.go  char.go  error.go  errors.go  gml.go  go.mod  go.sum  grml.sh  grml.yaml  image.go  imageitem.go  imageprovider.go  imgprov.cpp  imgprov.hpp  listmodel.go  main.cpp  object.go  utils.go  variant.go
_old/: app.go  gml.go  image.go  imageprovider.go  utils.go
_old/cmd/gml/: build.go  docker.go  main.go  util.go
_old/internal/binding/: gml_app.cpp  gml_app.h  gml_bytes.cpp  gml_bytes.h  gml_global.h  gml_image.h  gml_image_item.cpp  gml_image_provider.h  gml_list_model.cpp  gml_object.h  gml_variant.h
_old/internal/bridge/: bridge.go
_old/internal/codegen/: generate.go  generator_cpp.go  types.go
_old/internal/docker/: docker.go
_old/internal/templates/: main.cpp
_old/internal/utils/: utils_unix.go
_old/samples/: main.go
_old/samples/qml/: main.qmlc
_test/: CMakeLists.txt  Makefile  gml  main.cpp  main.qml  resources.qrc  test.pro
_test/qml/: gallery.qml
_test/qml/pages/: DialogPage.qml  ScrollBarPage.qml  ScrollIndicatorPage.qml  SwipeViewPage.qml  TabBarPage.qml
_test/resources/: qtquickcontrols2.conf
_unused/: README.md  TODO.md  app.go  cgo-static.go  gml.go  imageitem.go
_unused/cmd/gml/: .gitignore
_unused/cmd/gml-copy-dlls/: main.go
_unused/docker/common/: base  windows  windows_shared
_unused/docker/linux/: Dockerfile
_unused/docker/windows_32_shared/: Dockerfile.in
_unused/docker/windows_64_shared/: Dockerfile  Dockerfile.in
_unused/imgprov/: plugin.cpp
_unused/internal/utils/: utils.go  utils_windows.go
binding/: binding.pro
binding/headers/: app.h
binding/sources/: app.h
cmd/gml/: _test.go  build.go  docker.go  main.go  version.go
cmd/gml-copy-dlls/: .gitignore  main.go
cpp/backend/: CMakeLists.txt  backend.cpp  backend.hpp
cpp/imgprov/: CMakeLists.txt  imgprov.cpp
docker/: .gitignore  Makefile  README.md  TODO.md  generate.go  qt5-linux-static.dockerfile  qt5-linux.dockerfile  qt5-win64-static.dockerfile  qt5-win64.dockerfile  qt6-linux-static.dockerfile
docker/_unused/android/: Dockerfile
docker/_unused/windows_64_static/: Dockerfile
docker/_unused/windows_wine/: Dockerfile  pacman-msys2.conf  pacman.conf
docker/android/: Dockerfile
docker/common/: base  deploy-dlls.sh  entrypoint.sh  windows
docker/linux/: Dockerfile  Dockerfile.in
docker/linux-x86_64-shared/: Dockerfile
docker/scripts/: generate.go
docker/templates/: base  mxe
docker/tmp/: Dockerfile
docker/windows/: Dockerfile  Dockerfile.in
docker/windows_32_shared/: Dockerfile  Dockerfile.in
docker/windows_32_static/: Dockerfile  Dockerfile.in
docker/windows_64_shared/: Dockerfile  Dockerfile.in
docker/windows_64_static/: Dockerfile  Dockerfile.in
go/: go.mod  lib.go  main.go
internal/app/: app.go
internal/binding/: gml.h  gml_app.cpp  gml_app.h  gml_error.cpp  gml_error.h  gml_image.cpp  gml_image_item.h  gml_includes.h  gml_list_model.h  gml_variant.cpp
internal/binding/headers/: app.h  gml.h  gml_app.h  gml_bytes.h  gml_error.h  gml_global.h  gml_image.h  gml_image_item.h  gml_image_provider.h  gml_imageprovider.h  gml_includes.h  gml_list_model.h  gml_object.h  gml_variant.h  object.h
internal/binding/sources/: app.cpp  app.h  gml_app.cpp  gml_app.h  gml_bytes.cpp  gml_error.cpp  gml_error.h  gml_global.cpp  gml_image.cpp  gml_image_item.cpp  gml_image_item.h  gml_image_provider.cpp  gml_image_provider.h  gml_imageprovider.cpp  gml_imageprovider.h  gml_includes.h  gml_list_model.cpp  gml_list_model.h  gml_variant.cpp
internal/bridge/: bridge.h
internal/builder/: builder.go  buildmanifest.go  context.go  options.go  projectmanifest.go
internal/codegen/: context.go  generate.go  generator.go  generator_c.go  generator_cpp.go  generator_go.go  generator_res.go  parse.go  typeconv.go
internal/docker/: context.go  docker.go
internal/json/: json.go
internal/print/: print.go
internal/templates/: initializer.go  project.pro  resources.qrc
internal/utils/: path.go  print.go  utils.go  utils_test.go  utils_unix.go  utils_windows.go
pointer/: pointer.go
qml/: Main.qml  main.js
qml/Action/: CMakeLists.txt
qml/Action/AnomalyClass/: AnomalyClass.js  CMakeLists.txt
qml/Action/App/: App.js  CMakeLists.txt  Toast.js
qml/Action/Camera/: CMakeLists.txt  Camera.js  Detail.js  Focus.js
qml/Action/ClassificationImage/: CMakeLists.txt  ClassificationImage.js  Create.js  Detail.js  Overview.js
qml/Action/Dashboard/: CMakeLists.txt  Dashboard.js
qml/Action/Dev/: CMakeLists.txt  Dev.js
qml/Action/Event/: CMakeLists.txt  Detail.js  Overview.js
qml/Action/Global/: CMakeLists.txt  Global.js
qml/Action/Help/: CMakeLists.txt  Help.js  Nvision.js  Resource.js
qml/Action/Internal/: CMakeLists.txt  Internal.js
qml/Action/Login/: CMakeLists.txt  Connect.js  Discovery.js  Login.js
qml/Action/Navigation/: CMakeLists.txt  Navigation.js
qml/Action/Notification/: CMakeLists.txt  Notification.js
qml/Action/PDFPreview/: CMakeLists.txt  PdfPreview.js
qml/Action/Product/: CMakeLists.txt  Create.js  Detail.js  Overview.js  Product.js  Retrain.js  TrainImages.js
qml/Action/Run/: Active.js  CMakeLists.txt  Create.js  Detail.js  Export.js  Overview.js  Run.js  (+2 more)
qml/Dispatcher/: CMakeLists.txt  Dispatcher.qml
qml/Lib/: AnomalyClass.js  Array.js  CMakeLists.txt  Color.js  Constants.js  Date.js  Event.js  Log.js  Math.js  Object.js  State.js  String.js  TimeInterval.js  Tr.js  Validation.js
qml/Middleware/: CMakeLists.txt  Init.qml
qml/Store/: CMakeLists.txt  Main.qml  Store.qml  conv.js  initState.js  page.js  util.js
qml/Theme/: CMakeLists.txt  Theme.qml
resources/translations/: app_de.ts  app_en.ts
samples/: .gitignore
samples/hello_world/: .gitignore  main.go
samples/image_item/: .gitignore  main.go
samples/list_model/: .gitignore  model.go
samples/qml/: main.qml
samples/signals_slots/: .gitignore  main.go
scripts/: go.mod  grml.sh  main.go  rename.sh
(+377 files in other folders)
